# conduit

./: .env.example  .env.prod.example  .gitignore  .gitleaks.toml  .thumbnail  CHANGELOG.md  DEMO.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html
.github/: dependabot.yml
.github/workflows/: ci.yml
core/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
core/alembic/: env.py
core/alembic/versions/: 0001_initial.py  0002_idempotency_responses.py  0003_tz_aware_datetimes.py  0004_idem_created_at_index.py  0005_platform_fee_sats.py  0006_agent_balance_nonneg.py  0007_idem_operator_wide.py  0008_treasury_withdrawals.py
core/conduit_core/: auth.py  config.py  errors.py  main.py  middleware.py  observability.py  schemas.py
core/conduit_core/db/: __init__.py  database.py  models.py
core/conduit_core/routes/: agents.py  fees.py  invoices.py  keys.py  metrics.py  payments.py  policies.py  system.py  transactions.py  treasury.py  webhooks.py
core/conduit_core/services/: fees.py  idempotency.py  ids.py  invoice_watcher.py  ledger.py  lnd.py  locks.py  maintenance.py  policy_engine.py  reconciler.py  safe_http.py  solvency.py  treasury.py  wallet.py  webhook_sender.py
core/tests/: conftest.py  test_api.py  test_api_keys_revoke.py  test_audit_fixes.py  test_concurrency_ledger.py  test_high_fixes.py  test_idempotency.py  test_invoice_watcher.py  test_metrics.py  test_payment_safety.py  test_platform_fees.py  test_policy_engine.py  test_reconciler.py  test_redteam_hardening.py  test_solvency.py  test_ssrf.py  test_treasury.py  test_v07_hardening.py  test_webhook_faf.py
dashboard/: .env.example  .env.production  README.md  TREASURY.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/audit/: page.tsx
dashboard/app/docs/: page.tsx
dashboard/app/keys/: page.tsx
dashboard/app/network/: page.tsx
dashboard/app/policies/: page.tsx
dashboard/app/sandbox/: page.tsx
dashboard/app/treasury/: page.tsx
dashboard/app/wallets/: page.tsx
dashboard/app/wallets/[id]/: page.tsx
dashboard/app/webhooks/: page.tsx
dashboard/components/: AppShell.tsx  Avatar.tsx  BulkCreateModal.tsx  CreateKeyModal.tsx  Dropdown.tsx  LoginScreen.tsx  Placeholder.tsx  Providers.tsx  Sidebar.tsx  StatCard.tsx  StatusBadge.tsx  Topbar.tsx
dashboard/components/charts/: AreaChart.tsx  BarChart.tsx
dashboard/lib/: api.ts  appdata.tsx  auth.tsx  csv.ts  format.ts  price.ts  toast.tsx  types.ts  useAuditLog.ts  useOverview.ts  useTxCounts.ts
docs/: MAINNET_READINESS.md  PRODUCTION_READINESS.md  SECURITY_AUDIT_PREP.md  mkdocs.yml
docs/docs/: index.md  production.md  quickstart.md
docs/docs/api/: agents.md  authentication.md  fees.md  invoices.md  metrics.md  overview.md  payments.md  policies.md  transactions.md  webhooks.md
docs/docs/concepts/: agents.md  payments.md  policies.md  security.md
docs/docs/reference/: changelog.md  errors.md  rate-limits.md
docs/docs/sdk/: mcp.md  python.md  typescript.md
infra/: README.md
infra/bitcoind/: bitcoin.conf.example  bitcoind.service
infra/lnd/: lnd-testnet.conf.example  lnd-testnet.service  lnd.conf.example  lnd.service
infra/nginx/: conduit.conf  conduit.prod.conf
infra/scripts/: alert_check.sh  backup_channels.sh  backup_postgres.sh  backup_postgres_to_s3.sh  deploy.sh  install_bitcoind.sh  install_lnd.sh  restore_test.sh  setup_channels.sh  setup_firewall.sh  setup_wallet_unlock.sh  verify_node.sh
infra/systemd/: conduit-backup.service  conduit-backup.timer
mcp-server/: LICENSE  README.md  pyproject.toml
mcp-server/conduit_mcp/: server.py
mcp-server/scripts/: smoke_test.py  test_idempotent_pay.py  test_keysend_routing.py
mcp-server/tests/: test_routing.py
sdk-js/: README.md  package-lock.json  package.json  tsconfig.json
sdk-js/examples/: quickstart.ts
sdk-js/src/: agent.ts  client.ts  conduit-client.ts  errors.ts  index.ts  policy.ts  types.ts  webhook.ts
sdk-js/tests/: retry.test.mjs  webhook.test.mjs
sdk-python/: README.md  pyproject.toml
sdk-python/conduit/: __init__.py  agent.py  client.py  conduit_client.py  errors.py  invoice.py  payment.py  policy.py  transaction.py  webhook.py
sdk-python/examples/: ai_agent_pays_api.py  ai_agent_tool.py  quickstart.py
sdk-python/tests/: test_retry_and_webhook.py  test_sdk_against_core.py
website/: app.jsx  dashboard.jsx  index.html  sections.jsx  styles.css  util.jsx
