[project]
name = "conduit-core"
version = "0.1.0"
description = "Conduit Core API — Bitcoin Lightning payment infrastructure for autonomous AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.3",
  "uvicorn[standard]>=0.49.0",
  "sqlalchemy[asyncio]>=2.0.50",
  "aiosqlite>=0.22.1",
  "asyncpg>=0.31.0",
  "alembic>=1.18.4",
  "bcrypt>=5.0.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "httpx>=0.28.1",
  "python-dotenv>=1.2.2",
  "structlog>=26.1.0",
  "bolt11>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.16",
  "mypy>=2.1.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["conduit_core*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
# B008: `Depends(...)` in defaults is the official FastAPI idiom.
# ASYNC109: `timeout` as a param name is a style preference, not a bug.
ignore = ["B008", "ASYNC109"]
