[project]
name = "conduit-core"
version = "0.1.0"
description = "Conduit Core API — Bitcoin Lightning payment infrastructure for autonomous AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy[asyncio]>=2.0",
  "aiosqlite>=0.20",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "bcrypt>=4.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  "bolt11>=2.1",
  "prometheus-client>=0.20",
  "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["conduit_core*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
# B008: `Depends(...)` in defaults is the official FastAPI idiom.
# ASYNC109: `timeout` as a param name is a style preference, not a bug.
ignore = ["B008", "ASYNC109"]
