[project]
name = "conduit-mcp"
version = "0.1.0"
description = "MCP server exposing your self-hosted, non-custodial Conduit Lightning instance to any MCP-compatible AI agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "mcp>=0.9.0",
  "conduit-sdk>=0.1.0",
]

[project.scripts]
conduit-mcp = "conduit_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["conduit_mcp*"]
