[project]
name = "conduit-btc-mcp"
version = "0.8.4"
description = "MCP server exposing your self-hosted, non-custodial Conduit Lightning instance to any MCP-compatible AI agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "mcp>=0.9.0",
  # The Conduit Python SDK is published as `conduit-btc` (imported as `conduit`).
  "conduit-btc>=0.8.4",
]

[project.scripts]
conduit-mcp = "conduit_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["conduit_mcp*"]
