[project]
name = "conduit-sdk"
version = "0.1.0"
description = "Bitcoin Lightning payments for autonomous AI agents — Conduit SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Conduit" }]
keywords = ["bitcoin", "lightning", "ai-agents", "payments", "lnd"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://conduit.energy"
Documentation = "https://docs.conduit.energy"
Repository = "https://github.com/Jake1848/conduit"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["conduit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
