[project]
name = "conduit-btc"
version = "0.8.5"
description = "Self-hosted, non-custodial Bitcoin Lightning payments for autonomous AI agents — your node, your keys, your rules."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jake Knowles" }]
keywords = ["bitcoin", "lightning", "ai-agents", "payments", "lnd", "self-hosted", "non-custodial"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Jake1848/conduit"
Documentation = "https://github.com/Jake1848/conduit"
Repository = "https://github.com/Jake1848/conduit"
Issues = "https://github.com/Jake1848/conduit/issues"

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=0.23", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["conduit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
